<resources>
    <string name="app_name">OHO!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ft">%2d ft</string>
    <string name="inch">%2d in</string>
    <string name="day">%02d</string>
    <string name="year">%2d</string>
    <string name="select_your_prompt_question">Select your prompt question.</string>
    <string name="caption_for_the_photo">Caption for the photo</string>
    <string name="please_fill_in_about_yourself">Please fill in about yourself</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur \n adipiscing elit, sed do eiusmod tempor \n incididunt ut labore et dolore magna aliqua...</string>
    <string-array name="distance_list">
        <item>10 miles</item>
        <item>20 miles</item>
        <item>30 miles</item>
        <item>40 miles</item>
        <item>50 miles</item>
    </string-array>
    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
        <item>Both</item>
    </string-array>
    <string-array name="education_list">
        <item>No Degree</item>
        <item>High School</item>
        <item>Undergrad</item>
        <item>Masters</item>
        <item>PHD</item>
        <item>Open to all</item>
    </string-array>
    <string-array name="ethnicity_list">
        <item>White</item>
        <item>Asian</item>
        <item>Black</item>
        <item>African American</item>
        <item>African</item>
        <item>American</item>
        <item>Hispanic</item>
        <item>Latinx</item>
        <item>Pacific Islander</item>
        <item>American Indian</item>
        <item>Open to all</item>
    </string-array>
    <string-array name="religion_list">
        <item>Christian</item>
        <item>Catholic</item>
        <item>Jewish</item>
        <item>Muslim</item>
        <item>Hindu</item>
        <item>Sikh</item>
        <item>Agnostic</item>
        <item>Buddhist</item>
        <item>Spiritual/Not Religious</item>
        <item>Open to all</item>
    </string-array>
    <string-array name="budget_list">
        <item>$</item>
        <item>$$</item>
        <item>$$$</item>
        <item>Open to all</item>
    </string-array>
    <string-array name="cuisine_list">
        <item>Italian</item>
        <item>Japanese</item>
        <item>Indian</item>
        <item>Mediterranean</item>
        <item>Korean</item>
        <item>American</item>
        <item>Vegetarian</item>
        <item>Vietnamese</item>
        <item>Chinese</item>
        <item>Open to all</item>
    </string-array>
    <string-array name="quickmessage_list">
        <item>Excited for our date tomorrow :D</item>
        <item>Yes</item>
        <item>No</item>
        <item>I\'m here</item>
        <item>Be there in 15 mins</item>
        <item>Are you here?</item>
        <item>Be there in 30 mins</item>
        <item>Running late!</item>
        <item>Be there in a moment</item>
    </string-array>
    <string-array name="prompt_list">
        <item>The most adventurous thing I did was…</item>
        <item>In a relationship I am looking for…</item>
        <item>Ideal Friday Night for me is…</item>
        <item>Ideal Saturday Night for me is…</item>
        <item>Ideal Sunday for me is…</item>
        <item>My proudest achievement is…</item>
        <item>My ideal date is…</item>
        <item>In a partner, I am looking for…</item>
        <item>Recently, I learned…</item>
        <item>One social cause that I really care about is…</item>
        <item>One environmental cause that I really care about is…</item>
        <item>I am a little weird when it comes to…</item>
        <item>The most attractive thing about me is…</item>
        <item>One of my life goal is to…</item>
        <item>Any three people I would invite to a dinner are…</item>
        <item>If money didn\'t matter, I would be…</item>
        <item>A surprising fact about me is…</item>
        <item>Most controversial opinion that I have is…</item>
        <item>People usually mistake me for…(Bard Pitt/being too loud…)</item>
        <item>Something that I can endlessly talk about is…</item>
        <item>I am passionate about…</item>
        <item>An outdoor activity that I enjoy is…</item>
        <item>An indoor activity that I enjoy is…</item>
        <item>Whiskey or Wine…</item>
        <item>Cats or Dogs</item>
        <item>Coffee or Tea</item>
        <item>Indoor or Outdoor</item>
    </string-array>
    <string-array name="faq_questions_list">
        <item>What is Oho!?</item>
        <item>How does it work?</item>
        <item>What happens if I don\'t show up on my date?</item>
        <item>Is Oho! safe for me?</item>
        <item>Can I chat with my match before the date?</item>
        <item>How do I express interest in someone?</item>
        <item>What are the available time slots for arranging a date?</item>
        <item>What is our motivation for this app?</item>
    </string-array>
    <string name="privacy_para_1">At Oho!, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Oho! and how we use it.
If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</string>
    <string name="privacy_para_2">Oho! follows a standard procedure of using log files. These files log visitors when they use app. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the app, tracking users\' movement on the app, and gathering demographic information.</string>
    <string name="privacy_para_3">Some of advertisers in our app may use cookies and web beacons. Our advertising partners are listed below. Each of our advertising partners has their own Privacy Policy for their policies on user data. For easier access, we hyperlinked to their Privacy Policies below.
    \n\n• Google \nhttps://policies.google.com/technologies/ads
    </string>
    <string name="privacy_para_4">You may consult this list to find the Privacy Policy for each of the advertising partners of Oho!.
Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Beacons that are used in their respective advertisements and links that appear on Oho!. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on this app or other apps or websites.
Note that Oho! has no access to or control over these cookies that are used by third-party advertisers.
    </string>
    <string name="privacy_para_5">Oho!\'s Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options.</string>
    <string name="privacy_para_6">Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity.
Oho! does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our App, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.
    </string>
    <string name="privacy_para_8">By using our app, you hereby consent to our Privacy Policy and agree to its Terms and Conditions.</string>
    <string name="safe_dating_tips_para_1">We want you to have a great dating experience but at the same time we want you to be safe! Here are some safe guidelines to keep in mind as you go on your dates:</string>
    <string name="safe_dating_tip_1"><b>1.</b> Keep loved ones in the loop</string>
    <string name="safe_dating_tip_2"><b>2.</b> Limit alcohol consumption</string>
    <string name="safe_dating_tip_3"><b>3.</b> Do not give out personal info on the first date. The chat lines will open once you arrive at your date, and you can continue talking over the chat if you both connect</string>
    <string name="safe_dating_tip_4"><b>4.</b> Enlist the help of the restaurant manager or waiter. Our restaurant managers know that you are coming through Oho! and they can safely walk you out to your transportation</string>
</resources>