<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".views.settings.SafeDatingTipsActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Safe Dating Tips"
        android:fontFamily="@font/sf_pro_rounded_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_40ssp"
        android:textStyle="bold"
        android:paddingTop="@dimen/_30sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safe_dating_tips_para_1"
                android:justificationMode="inter_word"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:layout_marginTop="@dimen/_10sdp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safe_dating_tip_1"
                android:justificationMode="inter_word"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:layout_marginTop="@dimen/_10sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safe_dating_tip_2"
                android:justificationMode="inter_word"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:layout_marginTop="@dimen/_10sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safe_dating_tip_3"
                android:justificationMode="inter_word"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:layout_marginTop="@dimen/_10sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safe_dating_tip_4"
                android:justificationMode="inter_word"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:layout_marginTop="@dimen/_10sdp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>