<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".views.registration.DobInputFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_25sdp"
            android:fontFamily="@font/sf_pro_rounded_regular"
            android:text="What is your \n date of birth?"
            android:textAlignment="center"
            android:textColor="@color/textTitle"
            android:textSize="@dimen/_35ssp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_20sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:padding="@dimen/_10sdp">

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/number_picker_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_30sdp"
                    app:np_dividerColor="@color/indicatioractive"
                    app:np_fadingEdgeEnabled="false"
                    app:np_formatter="@string/ft"
                    app:np_height="180dp"
                    app:np_max="8"
                    app:np_min="3"
                    app:np_selectedTextColor="@color/indicatioractive"
                    app:np_selectedTextSize="@dimen/_20ssp"
                    app:np_textColor="@color/textTertiary"
                    app:np_textSize="@dimen/_15ssp"
                    app:np_value="5"
                    app:np_width="64dp" />

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/number_picker_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_30sdp"
                    app:np_dividerColor="@color/indicatioractive"
                    app:np_fadingEdgeEnabled="false"
                    app:np_formatter="@string/day"
                    app:np_height="180dp"
                    app:np_max="31"
                    app:np_min="1"
                    app:np_selectedTextColor="@color/indicatioractive"
                    app:np_selectedTextSize="@dimen/_20ssp"
                    app:np_textColor="@color/textTertiary"
                    app:np_textSize="@dimen/_15ssp"
                    app:np_value="3"
                    app:np_width="64dp" />

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/number_picker_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:np_dividerColor="@color/indicatioractive"
                    app:np_fadingEdgeEnabled="false"
                    app:np_formatter="@string/year"
                    app:np_height="180dp"
                    app:np_max="2005"
                    app:np_min="1950"
                    app:np_selectedTextColor="@color/indicatioractive"
                    app:np_selectedTextSize="@dimen/_20ssp"
                    app:np_textColor="@color/textTertiary"
                    app:np_textSize="@dimen/_15ssp"
                    app:np_value="3"
                    app:np_width="64dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_age_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/button_background_gradient_dark">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true">

                    <TextView
                        android:id="@+id/text_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_rounded_medium"
                        android:text="25 years"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_30ssp"
                        android:layout_gravity="center"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_rounded_regular"
                        android:text="This cannot be changed later"
                        android:textAllCaps="true"
                        android:layout_gravity="center"
                        android:textColor="#80FFFFFF"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold"/>
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</FrameLayout>